<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fjflap</groupId>
  <artifactId>fjflap</artifactId>
  <version>0.0.1</version>
  <packaging>jar</packaging>
  <name>FJFLAP</name>

  <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <sourceDirectory>${project.basedir}</sourceDirectory>
    <resources>
      <resource>
        <targetPath>DOCS</targetPath>
        <directory>DOCS</directory>
      </resource>
      <resource>
        <targetPath>ICON</targetPath>
        <directory>ICON</directory>
      </resource>
      <resource>
        <targetPath>MEDIA</targetPath>
        <directory>MEDIA</directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>22</release>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <mainClass>gui.Main</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
	<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-anim -->
	<dependency>
	    <groupId>org.apache.xmlgraphics</groupId>
	    <artifactId>batik-anim</artifactId>
	    <version>1.17</version>
	    <exclusions>
	        <exclusion>
	            <groupId>xml-apis</groupId>
	            <artifactId>xml-apis</artifactId>
	        </exclusion>
	        <exclusion>
	            <groupId>xml-apis</groupId>
	            <artifactId>xml-apis-ext</artifactId>
	        </exclusion>
	    </exclusions>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-svggen -->
	<dependency>
	    <groupId>org.apache.xmlgraphics</groupId>
	    <artifactId>batik-svggen</artifactId>
	    <version>1.17</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-swing -->
	<dependency>
	    <groupId>org.apache.xmlgraphics</groupId>
	    <artifactId>batik-swing</artifactId>
	    <version>1.17</version>
	</dependency>
  </dependencies>
</project>